Add description to lasagna recipe

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h1>Lasagne Verdi al Forno</h1>
+    <h3>Description:</h3>
+    <p>A recipe from my home in <em>Emilia-Romagna, Italy</em>; this lasagna made with spinach pasta cannot be beat. It's excellent if you want to impress some 
+        guests, or even yourself. It may be a bit <strong>time consuming</strong>, but it's well worth the TLC you put into it.</p>
     <ul>
-        <legend><h3>Ingredients: </h3></legend>
+        <legend><h3>Ingredients:</h3></legend>
         <li>cheese</li>
         <li>spinach</li>
         <li>pasta</li>
