--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagne.html">Lasagne Verdi al Forno</a>
-    <a href="recipes/brocolli-fritters.html">Grain-Free Broccoli Fritters</a>
+    <a href="recipes/lasagne.html">Lasagne Verdi al Forno</a><br/>
+    <a href="recipes/brocolli-fritters.html">Grain-Free Broccoli Fritters</a><br/>
     <a href="recipes/pancakes.html">Fluffy Pancakes</a>
 </body>
 </html>
