--- a/recipes/brocolli-fritters.html
+++ b/recipes/brocolli-fritters.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grain-Free Broccoli Fritters</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Grain-Free Broccoli Fritters</h1>
