--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagne Verdi al Forno</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Lasagne Verdi al Forno</h1>
